@@ -50,6 +50,7 @@
     <guava.version>31.0.1-jre</guava.version>
     <ant.version>1.10.12</ant.version>
     <snakeyaml.version>1.30</snakeyaml.version>
+    <test.additional.args></test.additional.args>
   </properties>
 
   <dependencyManagement>
@@ -133,7 +134,7 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-common</artifactId>
-      <version>4.1.73.Final</version>
+      <version>4.1.74.Final</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -169,6 +170,9 @@
               <value>org.apache.pulsar.tests.PulsarTestListener,org.apache.pulsar.tests.AnnotationListener,org.apache.pulsar.tests.FailFastNotifier</value>
             </property>
           </properties>
+          <argLine>
+            ${test.additional.args}
+          </argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -238,4 +242,19 @@
       </extension>
     </extensions>
   </build>
+  <profiles>
+    <profile>
+      <id>jdk11</id>
+      <activation>
+        <jdk>[11,)</jdk>
+      </activation>
+      <properties>
+        <!-- required for running tests on JDK11+ -->
+        <test.additional.args>
+          --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED <!--Mockito-->
+        </test.additional.args>
+      </properties>
+    </profile>
+  </profiles>
 </project>
